--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -1,1 +1,24 @@
-<h1>show</h1>
+<% if @user.image? %>
+  <%= image_tag @user.image.url, :size => '100x100' %>
+<% else %>
+  <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+<% end %>
+<h3>名前</h3>
+<%= @user.name %>
+<h3>introduction</h3>
+<%= @user.introduction %>
+<h3>フォロー</h3>
+<%= link_to @user.relationships.count, following_user_path(@user.id) %>
+<h3>フォロワー</h3>
+<%= link_to @user.reverse_of_relationships.count, followers_user_path(@user.id) %>
+<h3>ポイント</h3>
+<% if current_user == @user %>
+	<%= link_to balance_path(@user.id) do %>
+		<% if @user.point == nil %>
+			<% @user.point = 0 %>
+		<% end %>
+		<%= @user.point %>
+	<% end %>
+<% end %>
+<h3>コレクション数</h3>
+<%= link_to @user.collections.count, collections_path(@user.id) %>
