--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,26 @@
 
   <body>
     <header style = "height:100px;background-color:black;">
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-warning" %>
+      <div class="dropdown">
+        <!-- 切替ボタンの設定 -->
+        <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          ドロップダウンボタン
+        </button>
+        <!-- ドロップメニューの設定 -->
+        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+          <% if user_signed_in? %>
+            <%= current_user.name %>
+            <%= link_to "マイページ", users_path %>
+            <%= link_to "設定", setting_path %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-warning" %>
+            <%= link_to "退会", unsubscribe_users_path(current_user) %>
+          <% else %>
+            <h5>ようこそ</h5>
+            <%= link_to "新規登録", new_user_registration_path %>
+            <%= link_to "ログイン", new_user_session_path %>
+          <% end %>
+        </div><!-- /.dropdown-menu -->
+      </div><!-- /.dropdown -->
     </header><!-- /header -->
     <%= yield %>
     <footer class = "fixed-bottom" style = "height:100px;background-color:black;">
