[Add] 新規投稿機能　仮完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,9 @@
             <%= link_to "新規登録", new_user_registration_path %>
             <%= link_to "ログイン", new_user_session_path %>
           <% end %>
-        </div><!-- /.dropdown-menu -->
-      </div><!-- /.dropdown -->
+        </div>
+      </div>
+      <%= link_to 'logo', posts_path %>
     </header><!-- /header -->
     <%= yield %>
     <footer class = "fixed-bottom" style = "height:100px;background-color:black;">
