--- a/app/views/users/users/show.html.erb
+++ b/app/views/users/users/show.html.erb
@@ -22,3 +22,4 @@
 <% end %>
 <h3>コレクション数</h3>
 <%= link_to @user.collections.count, collections_path(@user.id) %>
+<%= link_to "✉️", new_post_path %>
