[Add] 投稿への返信　仮完成

--- a/app/views/users/posts/index.html.erb
+++ b/app/views/users/posts/index.html.erb
@@ -8,6 +8,7 @@
 <%= post.user.name %>
 <%= post.value %>
 <%= post.body %>
+コメント数：<%= post.post_comments.count %>
 <% end %>
 <div class="dropdown">
   <!-- 切替ボタンの設定 -->
