--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <% if user_signed_in? %>
             <%= current_user.name %>
-            <%= link_to "マイページ", users_path %>
+            <%= link_to "マイページ", user_path(current_user.id) %>
             <%= link_to "設定", setting_path %>
             <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "btn btn-warning" %>
             <%= link_to "退会", unsubscribe_users_path(current_user) %>
