--- a/app/views/admins/posts/index.html.erb
+++ b/app/views/admins/posts/index.html.erb
@@ -17,6 +17,7 @@
     <!-- ドロップメニューの設定 -->
     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
         <%= link_to "削除", post_path(post.id), method: :delete, "data-confirm" => "本当に消しますか？" %>
+        <%= link_to "報告取消", admins_cancel_report_path(post.id), method: :patch, "data-confirm" => "報告を取り消しますか？" %>
     </div>
   </div>
 <% end %>
