[Add] 投稿の購入機能　仮完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       <%= link_to 'logo', posts_path %>
     </header><!-- /header -->
     <%= yield %>
-    <footer class = "fixed-bottom" style = "height:100px;background-color:black;">
+    <footer style = "height:50px;background-color:black;">
       
     </footer>
   </body>
