--- a/app/views/users/posts/index.html.erb
+++ b/app/views/users/posts/index.html.erb
@@ -1,4 +1,5 @@
 <% @posts.each do |post| %>
+<% if post.value == 0 %>
   <%= link_to(post_path(post.id)) do %>
     <% if post.user.image? %>
       <%= image_tag post.user.image.url, :size => '100x100' %>
@@ -6,7 +7,6 @@
       <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
     <% end %>
     <%= post.user.name %>
-    <%= post.value %>
     <%= post.body %>
     コメント数：<%= post.post_comments.count %>
     <% if post.favorited_by?(current_user) %>
@@ -21,6 +21,58 @@
       <% end %>
     <% end %>
   <% end %>
+<% else %>
+  <% if (current_user == post.user) || (current_user.orders.exists?(post_number: post.id)) %>
+    <%= link_to post_path(post.id) do %>
+      <% if post.user.image? %>
+        <%= image_tag post.user.image.url, :size => '100x100' %>
+      <% else %>
+        <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+      <% end %>
+      <%= post.user.name %>
+      <%= post.title %>
+      価値<%= post.value %>
+      コメント数：<%= post.post_comments.count %>
+      <% if post.favorited_by?(current_user) %>
+        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
+          <span aria-hidden="true"></span>
+          <%= post.favorites.count %>
+        <% end %>
+      <% else %>
+        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
+          <span aria-hidden="true"></span>
+          <%= post.favorites.count %>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% else %>
+    <%= link_to confilm_path(post.id) do %>
+      <% if post.user.image? %>
+        <%= image_tag post.user.image.url, :size => '100x100' %>
+      <% else %>
+        <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+      <% end %>
+      <%= post.user.name %>
+      購入すると本文が見れるようになります
+      価値<%= post.value %>
+      コメント数：<%= post.post_comments.count %>
+      <% if post.favorited_by?(current_user) %>
+        <%= link_to post_favorites_path(post), method: :delete, remote: true do %>
+          <span aria-hidden="true"></span>
+          <%= post.favorites.count %>
+        <% end %>
+      <% else %>
+        <%= link_to post_favorites_path(post), method: :post, remote: true do %>
+          <span aria-hidden="true"></span>
+          <%= post.favorites.count %>
+        <% end %>
+      <% end %>
+    <% end %>
+  <% end %>
+
+
+
+<% end %>
   <div class="dropdown">
     <!-- 切替ボタンの設定 -->
     <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
