--- a/app/views/admins/homes/top.html.erb
+++ b/app/views/admins/homes/top.html.erb
@@ -1,2 +1,3 @@
 管理者topページです。
-<%= link_to '報告ページ', admins_posts_path %>
+<%= link_to '投稿報告ページ', admins_posts_path %>
+<%= link_to 'コメント報告ページ', admins_post_comments_path %>
