--- a/app/views/users/posts/show.html.erb
+++ b/app/views/users/posts/show.html.erb
@@ -1,42 +1,22 @@
-<% if @post.value == 0 %>
-<% if @post.user.image? %>
-    <%= image_tag @post.user.image.url, :size => '100x100' %>
-  <% else %>
-    <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
-  <% end %>
-  <%= @post.user.name %>
-  <%= @post.body %>
-  コメント数：<%= @post.post_comments.count %>
-  <% if @post.favorited_by?(current_user) %>
-    <%= link_to post_favorites_path(@post), method: :delete, remote: true do %>
-      <span aria-hidden="true"></span>
-      <%= @post.favorites.count %>
-    <% end %>
-  <% else %>
-    <%= link_to post_favorites_path(@post), method: :post, remote: true do %>
-      <span aria-hidden="true"></span>
-      <%= @post.favorites.count %>
-    <% end %>
-  <% end %>
-<% else %>
+<%= link_to user_path(@post.user.id) do %>
   <% if @post.user.image? %>
     <%= image_tag @post.user.image.url, :size => '100x100' %>
   <% else %>
     <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
   <% end %>
   <%= @post.user.name %>
-  <%= @post.body %>
-  コメント数：<%= @post.post_comments.count %>
-  <% if @post.favorited_by?(current_user) %>
-    <%= link_to post_favorites_path(@post), method: :delete, remote: true do %>
-      <span aria-hidden="true"></span>
-      <%= @post.favorites.count %>
-    <% end %>
-  <% else %>
-    <%= link_to post_favorites_path(@post), method: :post, remote: true do %>
-      <span aria-hidden="true"></span>
-      <%= @post.favorites.count %>
-    <% end %>
+<% end %>
+<%= @post.body %>
+コメント数：<%= @post.post_comments.count %>
+<% if @post.favorited_by?(current_user) %>
+  <%= link_to post_favorites_path(@post), method: :delete, remote: true do %>
+    <span aria-hidden="true"></span>
+    <%= @post.favorites.count %>
+  <% end %>
+<% else %>
+  <%= link_to post_favorites_path(@post), method: :post, remote: true do %>
+    <span aria-hidden="true"></span>
+    <%= @post.favorites.count %>
   <% end %>
 <% end %>
 <div class="dropdown">
@@ -57,20 +37,26 @@
 <%= f.submit "送信する" %>
 <% end %>
 <% @post.post_comments.each do |post_comment| %>
-<%= link_to user_path(post_comment.user.id) do %>
-  <% if @post.user.image? %>
-    <%= image_tag @post.user.image.url, :size => '100x100' %>
-  <% else %>
-    <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+  <%= link_to user_path(post_comment.user.id) do %>
+    <% if post_comment.user.image? %>
+      <%= image_tag post_comment.user.image.url, :size => '100x100' %>
+    <% else %>
+      <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+    <% end %>
+    <%= post_comment.user.name %>
   <% end %>
-  <%= post_comment.user.name %>
-<% end %>
-
-<%= post_comment.comment %>
-
-<% if current_user == post_comment.user %>
-  <%= link_to "Destroy", post_post_comment_path(post_comment.post, post_comment),
-    method: :delete, "data-confirm" => "本当に消しますか？",
-    :class => "destroy_btn" %>
-<% end %>
+  <%= post_comment.comment %>
+  <div class="dropdown">
+    <!-- 切替ボタンの設定 -->
+    <button type="button" class="btn btn-secondary dropdown-toggle" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+    <!-- ドロップメニューの設定 -->
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <% if current_user == post_comment.user %>
+        <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, "data-confirm" => "本当に消しますか？" %>
+        <%= link_to "報告", post_comment_report_path(post_comment.post, post_comment), method: :patch, "data-confirm" => "本当に報告しますか？" %>
+      <% else %>
+        <%= link_to "報告", post_comment_report_path(post_comment.post, post_comment), method: :patch, "data-confirm" => "本当に報告しますか？" %>
+      <% end %>
+    </div>
+  </div>
 <% end %>
