--- a/app/views/users/orders/index.html.erb
+++ b/app/views/users/orders/index.html.erb
@@ -1,12 +1,21 @@
+
+<%= @user.point %>
+
+
+履歴
 <% @orders.each do |order| %>
-<% if order.image? %>
-  <%= image_tag order.image, :size => '100x100' %>
-<% else %>
-  <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
-<% end %>
+<%= link_to user_path(order.user_number) do %>
+	<% if order.image? %>
+	  <%= image_tag order.image, :size => '100x100' %>
+	<% else %>
+	  <%= image_tag "/assets/no_image.jpg", :size => '100x100' %>
+	<% end %>
 <%= order.name %>
-<%= order.value %>
-<%= order.title %>
+<% end %>
+<%= link_to post_path(order.post_number) do %>
+	<%= order.value %>
+	<%= order.title %>
+<% end %>
 コメント数：<%= order.comment_count %>
 <%= order.favorite_count %>
 <% end %>
