--- a/app/views/users/users/followers.html.erb
+++ b/app/views/users/users/followers.html.erb
@@ -1,5 +1,5 @@
 <% @users.each do |user| %>
-<%= link_to user_path(user.id) do %>
+<%= link_to user_path(user.user.id) do %>
 <% if user.user.image? %>
   <%= image_tag user.user.image.url, :size => '100x100' %>
 <% else %>
