--- a/app/views/users/users/unsubscribe.html.erb
+++ b/app/views/users/users/unsubscribe.html.erb
@@ -1,3 +1,3 @@
 <h1>本当に退会しますか？</h1>
-<%= link_to 'する', withdraw_users_path, method: :patch %>
-<%= link_to 'しない', users_path %>
+<%= link_to 'する', withdraw_path, method: :patch %>
+<%= link_to 'しない', user_path(current_user) %>
